--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <section class="spacials container section">
         <!--Скрытая сторка-->
         <h2 class="spacial-slogan">Наши приемущества</h2>
-        <ul class="">
+        <ul class="spacials__list">
           <li class="spacial">
             <div class="thumb">
               <svg class="spacial__icon" width="70" height="70">
@@ -168,7 +168,7 @@
       <!--main-things-->
       <section class="main-thing container section">
         <h2 class="main__header">Чем мы занимаемся</h2>
-        <ul class="photo container">
+        <ul class="photo">
           <li class="photo-item">
             <div class="thing">
               <img
@@ -276,7 +276,7 @@
               <div class="team-member">
                 <h3 class="team-item-header">Игорь Демьяненко</h3>
                 <p class="team-item-text" lang="en">Product Designer</p>
-                <ul class="list flexbox">
+                <ul class="flexbox">
                   <li class="network">
                     <a class="social-network" href="" aria-label="instagram">
                       <svg class="network__icon" width="20" height="20">
@@ -372,7 +372,7 @@
               <div class="team-member">
                 <h3 class="team-item-header">Ольга Репина</h3>
                 <p class="team-item-text" lang="en">Frontend Developer</p>
-                <ul class="list flexbox">
+                <ul class="flexbox">
                   <li class="network">
                     <a class="social-network" href="" aria-label="instagram">
                       <svg class="network__icon" width="20" height="20">
@@ -468,7 +468,7 @@
               <div class="team-member">
                 <h3 class="team-item-header">Николай Тарасов</h3>
                 <p class="team-item-text" lang="en">Marketing</p>
-                <ul class="list flexbox">
+                <ul class="flexbox">
                   <li class="network">
                     <a class="social-network" href="" aria-label="instagram">
                       <svg class="network__icon" width="20" height="20">
@@ -564,7 +564,7 @@
               <div class="team-member">
                 <h3 class="team-item-header">Михаил Ермаков</h3>
                 <p class="team-item-text" lang="en">UI Designer</p>
-                <ul class="list flexbox">
+                <ul class="flexbox">
                   <li class="network">
                     <a class="social-network" href="" aria-label="instagram">
                       <svg class="network__icon" width="20" height="20">
